--- a/thesis/include/appendix.tex
+++ b/thesis/include/appendix.tex
@@ -1,4 +1,4 @@
-\chapter{Appendix}
+\chapter{Reproducibility}
 This chapter describes the source code repository and provides the information and  instructions of how to use, alter and/or improve the current version of the Hop-by-hop measurement framework. 
 
 \section{The Source Code Repository}
@@ -80,3 +80,4 @@ It contains default parameter values, each of which will be manipulated respecti
 }
 \end{lstlisting}
 
+\textit{\textbf{Disclaimer:} \texttt{packet\textunderscore loss} is a probability, therefore it does not always cause the packet loss during test runs; On the other hand, regular test runs with \texttt{packet\textunderscore loss = 0} can result in lost packets.}
