--- a/thesis/include/chapter3.tex
+++ b/thesis/include/chapter3.tex
@@ -1,11 +1,20 @@
 \chapter{Related Work}
 
 \section{Existing Approaches}
-Active vs Passive
-End-to-End vs Hop-by-hop
 
-\subsection*{Variable Packet Size Probing}
+\subsection{Variable Packet Size Probing}
 
-\subsection*{Packet Pair/Train Probing}
+\subsection{Packet Pair/Train Probing}
 
-\subsection*{PPrate}
+\subsection{Pathchar}
+
+\subsection{PPrate}
+
+
+\subsection*{Notes}
+Direct TCP to routers is blocked by routers. (find a source to prove this)\\
+This thesis will find out whether the PPrate algorithm is also useful in hop-by-hop estimations.\\
+\acl{mss}
+\sc{tcp}\\
+blablabla
+\sc{TCP}
