--- a/thesis/include/chapter2.tex
+++ b/thesis/include/chapter2.tex
@@ -2,9 +2,9 @@
 The following chapter provides the background information and defines the important terminology that is useful to understand our work.
 
 \section{Terminology}
-Certain terms in our area of research can be used with different meanings, therefore we first need to state that this thesis will be using the definitions provided by Prasad et al. \cite{prasad} in their paper "Bandwidth estimation: metrics, measurement, techniques and tools", as it appears to be more widespread and accepted.
+Certain terms in our area of research can be used with different meanings, therefore we first need to state that this thesis will be using the definitions provided by Prasad et al. \cite{Prasad2003} in their paper "Bandwidth estimation: metrics, measurement, techniques and tools", as it appears to be more widespread and accepted, as those are the definitions also used by other researchers at the chair, therefore, it is more practical to use the common language.
 
-Prasad et al. \cite{prasad} introduce the following three metrics: capacity, bandwidth and bulk transfer capacity(BTC), capacity being the main focus of our work.
+Prasad et al.\cite{Prasad2003} introduce the following three metrics: capacity, bandwidth and bulk transfer capacity(BTC), capacity being the main focus of our work.
 Moreover, they distinguish between segments and hops. The former being the link at the data link layer (L2) and the latter - the links at the IP layer (L3).
 
 % this is a copy. fix it.%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -28,22 +28,33 @@ The transmission time for an IP packet of size bytes is
 \subsection*{Available Bandwidth}
 Another important metric is the available bandwidth of a link or end-to-end path. The available bandwidth of a link relates to the unused, or “spare”, capacity of the link during a certain time period. So even though the capacity of a link depends on the underlying transmission technology and propagation medium, the available bandwidth of a link additionally depends on the traffic load at that link, and is typically a time-varying metric.
 
-\section{OSI Model}
+\section{Network Layers}
 
 \section{TCP}
 https://datatracker.ietf.org/doc/html/rfc793
+header diagrams.
+
+\section{UDP}
 
 \section{ICMP}
+\label{icmp_section}
 https://datatracker.ietf.org/doc/html/rfc792
 
 \section{Traffic Generation}
 
-\subsection*{iPerf}
-
 \subsection*{Raw Sockets}
 https://www.binarytides.com/raw-sockets-c-code-linux/
 
+
+\subsection*{iPerf}
+
+\subsection*{Capturing Traffic}
 \url{https://www.wireshark.org/docs/man-pages/tshark.html}
+tcpdump
 
 \section{Capacity Estimation}
 general explanation
+
+\subsection{End-to-End vs Hop-by-Hop Capacity Estimation}
+
+\subsection{Active vs Passive Capacity Estimation}
