--- a/thesis/include/chapter6.tex
+++ b/thesis/include/chapter6.tex
@@ -6,11 +6,14 @@ The following sections will shortly summarize our work throughout the timespan o
 \section{Evaluation Results}
 Sum up whether this method can actually be used in practice\\
 
+Like other active capacity estimation tools, ours also depends on the network that has to be measured. 
+Less loaded the network is, the better are the results.
+
 \section{Answers to the Research Questions}
 After the careful and thorough research we can already answer the questions we were aiming to address in the beginning of this thesis: \\
 \begin{itemize}
   \item \textbf{How to measure network capacity hop-by-hop?}
-  \\ 
+  \\ We have developed a way to estimate capacity hop-by-hop by sending ttl-exceeding packets to all the routers on the path to the destination. 
   \item \textbf{How to optimize the trade-off between accuracy and intrusiveness regarding large-scale measurements?}
   \\
   \item \textbf{How robust is the proposed solution regarding the handling of cross-traffic, flow-interference and sudden path parameter changes?}
@@ -22,6 +25,7 @@ After the careful and thorough research we can already answer the questions we w
 \end{itemize}
 
 \section{Future Work}
-As our evaluation has shown, there is a lot of room for improvement for our methodology.\\
-First and foremost, we have not conducted any test runs on a real network, which can be done in order to see how our tool handles the real traffic in the Internet.\\
+As our evaluation has shown, there still is a lot of room for improvement for our methodology.\\
+First and foremost, we have not conducted any test runs on a real network, as the performance of Mininet greatly depends on the machine it runs on and this could compromise the accuracy of the tool. Therefore, internet measurements should be performed in order to see how our tool handles the real traffic in the Internet.\\
 Moreover, further research is required to handle the inaccuracy problem with cross-traffic as it is the key factor when it comes to the real-life usage of our framework.\\
+Fader\cite{fader2017}
